# kf2

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md
.claude/: settings.json
.claude/hooks/: postedit-fmt-hook.sh
docs/: architecture.md
docs/frontend/: organization.md  technology.md
docs/server/: framework.md  persistence.md  providers.md
proto/: common.proto  kf2.proto  provider.proto  session.proto
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/frontend/: .gitignore  buf.gen.yaml  package.json  pnpm-lock.yaml
src/proto/: Cargo.toml  build.rs
src/proto/src/: lib.rs
src/server/: Cargo.toml  diesel.toml  kf2.toml
src/server/migrations/20260413000001_base_schema/: down.sql  up.sql
src/server/src/: api.rs  cli.rs  config.rs  db.rs  frontend.rs  grpc.rs  hls.rs  lib.rs  main.rs  provider.rs  provider_config.rs  repo.rs  session.rs
src/server/src/api/: provider.rs  session.rs  session_manager.rs
src/server/src/hls/: download.rs  error.rs  parse.rs  progress.rs  types.rs
src/server/src/models/: session.rs
src/server/src/provider/: cache.rs  dam.rs  dam_session.rs  error.rs  joysound.rs  joysound_session.rs  mock.rs  types.rs  youtube.rs
src/server/src/repo/: diesel_impl.rs  schema.rs
src/server/src/repo/diesel_impl/: provider_config.rs  session.rs
src/server/tests/: startup.rs
