[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
config = "0.15"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
random_word = { version = "0.5", features = ["en"] }
tonic = "0.14"
tonic-web = "0.14"
tower-http = { version = "0.6", features = ["fs", "set-header"] }
reqwest = { version = "0.12", features = ["cookies"] }
thiserror = "2"
anyhow = "1"
kf2-proto = { path = "../proto" }
which = "8"
strum = { version = "0.28.0", features = ["derive"] }
diesel = { version = "2.3.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono", "r2d2"] }
diesel_migrations = { version = "2.3.1", features = ["sqlite"] }
async-trait = "0.1.89"
chrono = { version = "0.4.44", default-features = false, features = ["serde", "clock", "std"] }
libsqlite3-sys = { version = "0.36", features = ["bundled"] }

[features]
# Exposes MockProvider for use in integration tests outside this crate.
test-support = []

[dev-dependencies]
tempfile = "3.27.0"
