[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.38", features = ["bundled"] }
rusqlite_migration = "2"
deadpool-sqlite = { version = "0.13", features = ["rt_tokio_1"] }
config = "0.15"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
random_word = { version = "0.5", features = ["en"] }
tonic = "0.14"
kf2-proto = { path = "../proto" }
hyper = { version = "1", features = ["server", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "http2", "http1"] }
tower = "0.5"
